# codex-safe-switch

./: .gitignore  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
alfred/: codex-profile-switcher.alfredworkflow  info.plist
examples/chatgpt-relay-profile/: provider.toml
examples/relay-profile/: auth.json  provider.toml
src/codex_profile_switcher/: cli.py  picker.py
src/codex_safe_switch/: _swap.py  cli.py
tests/: test_cli.py
