[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-safe-switch"
version = "1.0.4"
description = "Switch between OpenAI Codex CLI provider configurations (official OpenAI provider, third-party relays, multiple API keys). CLI + Alfred workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kadaliao" }]
keywords = ["codex", "openai", "cli", "alfred", "profile"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = ["tomlkit>=0.13"]

[project.urls]
Homepage = "https://github.com/kadaliao/codex-safe-switch"
Issues = "https://github.com/kadaliao/codex-safe-switch/issues"

[project.scripts]
codex-safe-switch = "codex_safe_switch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_safe_switch"]
